--- a/EscalArt/static/escalArt/css/chats.css
+++ b/EscalArt/static/escalArt/css/chats.css
@@ -274,6 +274,10 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow: hidden;
+    min-height: 517px;
+    overflow-y: scroll;
+    max-height: 518px;
 }
 
 .usuario {
@@ -338,7 +342,7 @@ body {
 }
 
 .usuario .estado-usuario.ocupado {
-    background-color: #5160F0;
+    background-color: #7BB42D;
 }
 
 .usuario .estado-usuario.desconectado {
@@ -349,7 +353,7 @@ body {
     display: block;
     width: auto;
     float: right;
-    background-color: #4981D5;
+    background-color: #86b539;
     color: #fff;
     padding: 0 8px;
     border-radius: 8px;
@@ -415,9 +419,12 @@ body {
 
 .panel-chat {
     display: block;
-    overflow-y: auto;
+    overflow: hidden;
+    overflow-y: scroll;
     padding-right: 15px;
     margin-bottom: 1rem;
+    min-height: 40vh;
+    max-height: 50vh;
 }
 
 .mensaje {
@@ -457,7 +464,7 @@ body {
 }
 
 .mensaje.left .cuerpo::before {
-    border-color: transparent transparent transparent #4580F7;
+    border-color: transparent transparent transparent #7BB42D;
     left: initial;
     right: -18px;
 }
@@ -568,7 +575,7 @@ body {
 }
 
 .panel-escritura button.enviar {
-    background-color: #4580F7;
+    background-color: #7BB42D;
     color: #fff;
 }
 
@@ -610,6 +617,18 @@ body {
 }
 
 .left>.cuerpo {
-    background-color: #4580F7;
+    /* background-color: #4580F7; */
+    background-color: #7BB42D;
     color: white;
+}
+
+
+/* isa */
+
+.avatar img {
+    width: 100%;
+    position: relative;
+    border-radius: 50%;
+    height: 100%;
+    object-fit: cover;
 }
