--- a/EscalArt/static/escalArt/css/home.css
+++ b/EscalArt/static/escalArt/css/home.css
@@ -10,10 +10,15 @@ html {
     font-size: 16px;
 }
 
+.linea_2 {
+    height: 4px;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
     overflow-x: hidden;
+    background: #F5F5F5;
 }
 
 
@@ -24,6 +29,7 @@ body {
 
 .titulo {
     text-align: center;
+    padding: 10px 0;
 }
 
 
@@ -37,21 +43,27 @@ body {
     justify-content: center;
     align-items: center;
     height: 10vh;
-    border-top: 1px solid #86C332;
-    border-bottom: 1px solid #86C332;
     width: 100%;
 }
 
 .chips-container {
     width: inherit;
     text-align: center;
+    text-transform: uppercase;
+    border-top: 1px solid #86C332;
+    border-bottom: 1px solid #86C332;
 }
 
 .chips {
     background-color: #f3f6f7;
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 5px 15px;
     color: #86C332;
+    margin: 5px 5px;
+}
+
+.chips span {
+    font-size: 1rem;
 }
 
 .chips:hover {
@@ -59,8 +71,10 @@ body {
     color: #f3f6f7;
 }
 
-.scrol {
-    height: 25px;
+.chips-container span a {
+    background: #86C332;
+    color: #fff;
+    font-size: 1.2rem;
 }
 
 
@@ -71,12 +85,13 @@ body {
 
 .galeria {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, 33% 33% 33%);
+    /* grid-template-columns: repeat(auto-fit, 33% 33% 33%); */
     width: 95%;
     margin: auto;
     gap: 15px;
     overflow: hidden;
-    padding: 40px 0;
+    padding: 20px;
 }
 
 .galeria img {
@@ -85,7 +100,6 @@ body {
     height: 300px;
     object-fit: cover;
     transition: transform 0.5s;
-    border-radius: 15px;
 }
 
 .galeria>img {
@@ -120,11 +134,18 @@ body {
 
 .username {
     padding: 20px 10px;
+    text-transform: lowercase;
+    text-decoration: none;
+}
+
+.username:first-letter {
+    text-transform: uppercase;
 }
 
 #descripcion-post {
     font-size: 1em;
     margin-bottom: 0;
+    color: #000;
 }
 
 .titulo-post {
@@ -132,10 +153,16 @@ body {
     width: 100%;
     align-self: flex-end;
     text-align: end;
+    text-transform: uppercase;
 }
 
 .post-container {
     display: flex;
+}
+
+.post {
+    box-shadow: 2px 2px 5px #999;
+    padding-bottom: 10px;
 }
 
 .post-likes {
@@ -143,12 +170,19 @@ body {
     text-align: start;
 }
 
+
+/* .post-likes i {
+    font-size: 25px;
+    padding-right: 25px;
+} */
+
 .corazon {
     color: red;
 }
 
 #cant-likes {
     padding-left: 5px;
+    font-size: 1rem;
 }
 
 #idPost {
@@ -158,8 +192,574 @@ body {
 
 #post-imagen {
     align-self: center;
-    height: inherit;
+    height: 100%;
+    border-radius: 20px;
+    border: 1px solid #2d2d2d;
+    object-fit: cover;
+}
+
+@media (max-width:750px) {
+    .galeria {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 100%);
+        width: 100%;
+        margin: auto;
+        gap: 15px;
+        overflow: hidden;
+        padding: 40px 5px;
+    }
+    /* Section Chips */
+    .section-chips {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 10vh;
+        width: 100%;
+        margin: 25px 0;
+    }
+    .chips-container {
+        width: inherit;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    .chips {
+        background-color: #f3f6f7;
+        border-radius: 10px;
+        padding: 5px 15px;
+        color: #86C332;
+        margin: 0 5px;
+    }
+    .chips span {
+        font-size: 0.8rem;
+    }
+    .chips-container span a {
+        background: #86C332;
+        color: #fff;
+        font-size: 0.8rem;
+    }
+    .chips:hover {
+        background-color: #86C332;
+        color: #f3f6f7;
+    }
 }
 
 
 /* Fin galeria/publicaciones */
+
+
+/* Imagenes Diseño */
+
+.sector-imagenes {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 100%;
+    padding: 20px 40px;
+}
+
+.contenido-img {
+    margin: 0 40px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.contenido-img img {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    border: 3px solid #E5E1DC;
+    border-radius: 20px;
+    object-fit: cover;
+    /* transition: 0.5s; */
+}
+
+
+/* .contenido-img img:hover {
+    transform: scale(1.1);
+} */
+
+.contenido-icono {
+    position: relative;
+    background: #A9DE54;
+    height: 200px;
+    width: 70px;
+    z-index: 10;
+    float: right;
+    margin: 20px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.contenido-icono i {
+    position: absolute;
+    font-size: 1.8rem;
+    right: 20px;
+    top: 37%;
+    color: #fff;
+    cursor: pointer;
+}
+
+.contenido-icono i:hover {
+    color: #646069;
+}
+
+.c-img {
+    position: relative;
+    /* display: flex; */
+    align-items: center;
+}
+
+.c-img .txt {
+    text-align: center;
+    position: absolute;
+}
+
+.c-img .txt p {
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: #fff;
+}
+
+.c-img h1 {
+    font-size: 2rem;
+    padding: 10px 20px;
+    color: #fff;
+}
+
+@media (max-width:750px) {
+    .sector-imagenes {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        padding: 10px;
+    }
+    .contenido-img {
+        margin: 15px 0;
+        position: relative;
+    }
+    .contenido-icono {
+        position: relative;
+        background: #A9DE54;
+        height: 200px;
+        width: 70px;
+        z-index: 10;
+        float: right;
+        margin: 20px;
+        border-radius: 20px;
+        text-align: center;
+    }
+}
+
+
+/* Questions */
+
+.contenedor-CNE {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.questions {
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.questions>img {
+    width: 550px;
+    border-radius: 50%;
+    border: 3px solid #F5F5F5;
+}
+
+.textos-questions h1 {
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+
+.textos-questions {
+    margin: 0 0 0 30px;
+}
+
+.textos-questions p {
+    font-weight: 100;
+    margin-top: 14px;
+    color: #5D6678;
+    margin-right: 20px;
+}
+
+.textos-questions a {
+    margin: 20px 0 0 0;
+    width: 130px;
+    display: inline-block;
+    background: #86C332;
+    text-align: center;
+    color: #fff;
+    padding: 12px 0;
+    text-decoration: none;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 14px;
+    border-radius: 5px;
+    box-shadow: 0 8px 32px rgba(31, 222, 130, .46);
+    text-decoration: none;
+}
+
+.textos-questions a:hover {
+    background: #659523;
+    color: #fff;
+}
+
+.btn-question-txt {
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.linea-separadora {
+    height: 4px;
+    background: #86C332;
+    display: block;
+    margin: 5px 20%;
+}
+
+@media (max-width:800px) {
+    .questions {
+        height: 720px;
+        justify-content: space-evenly;
+        flex-direction: column;
+    }
+    .questions>img {
+        width: 400px;
+    }
+}
+
+@media (max-width:600px) {
+    .textos-questions h1 {
+        font-size: 35px;
+    }
+    .questions>img {
+        width: 200px;
+    }
+}
+
+
+/* Cards de presentacion perifl de artistas mas seguidos */
+
+.body-cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-presentacion {
+    position: relative;
+    width: 250px;
+    height: 350px;
+    border-radius: 10px;
+    box-shadow: 2px 3px 5px rgba(73, 69, 52, 0.4);
+    margin: 40px;
+    transition: 0.5s ease;
+}
+
+.card-presentacion:hover {
+    margin-top: 10px;
+}
+
+.card-presentacion .card-content {
+    position: relative;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    text-align: center;
+    padding: 20px;
+    background: #fff;
+}
+
+.card-presentacion .card-content .card-img {
+    height: 50%;
+    margin-bottom: 20px;
+}
+
+.card-presentacion .card-content .card-img img {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
+}
+
+.card-presentacion .card-content span {
+    position: absolute;
+    width: 350px;
+    height: 200px;
+    background: linear-gradient(to right, #475f25, #86C332);
+    /* Empiece en un color y termine en otro color */
+    transform: rotate(-35deg);
+    top: -50px;
+    left: -100px;
+}
+
+.card-presentacion .card-content h4 {
+    font-size: 18px;
+    color: #1a1919;
+    margin-bottom: 5px;
+}
+
+.card-presentacion .card-content h6 {
+    font-size: 13px;
+    color: #86C332;
+}
+
+.card-presentacion .card-content p {
+    font-size: 13px;
+    color: #1a161f;
+    margin-top: 10px;
+}
+
+.title-artistas {
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 5px 0;
+    width: 100%;
+}
+
+.title-artistas span {
+    color: #86C332;
+}
+
+
+/* links */
+
+.card-presentacion .links {
+    position: absolute;
+    z-index: 90;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 2px 3px 5px rgba(73, 69, 52, 0.4);
+    padding: 20px;
+    align-items: center;
+    right: 10px;
+    top: 15px;
+    transition: .5s;
+}
+
+.btn-cards {
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+
+.btn-cards button {
+    padding: 5px 15px;
+    border: #bfc0c2 solid 2px;
+    color: #1a1919;
+    background: none;
+    margin: 10px 0;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.btn-cards button:hover {
+    background: #86C332;
+    color: #fff;
+}
+
+.rating-cards {
+    padding: 0;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.rating-cards i {
+    color: #fffb00;
+}
+
+.card-presentacion:hover .links {
+    right: -50px;
+    border-radius: 0 10px 10px 0;
+}
+
+.card-presentacion .links a {
+    font-size: 20px;
+    color: #646069;
+}
+
+.card-presentacion .links a:nth-child(1):hover {
+    color: #bfc0c2;
+}
+
+.card-presentacion .links a:nth-child(2):hover {
+    color: #0158ca;
+}
+
+.card-presentacion .links a:nth-child(3):hover {
+    color: #5D2770;
+}
+
+.card-presentacion .links a:nth-child(4):hover {
+    color: #a80e56;
+}
+
+
+/* Responsividad */
+
+@media (max-width:750px) {
+    .body-cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
+        justify-content: center;
+        justify-items: center;
+    }
+    .card-presentacion {
+        margin: 10px 0;
+    }
+}
+
+
+/* Diseño de Anuncio Index */
+
+
+/* Anuncio */
+
+:root {
+    --background: linear-gradient(135deg, #667eea7e 0%, #764ba298 100%);
+    --color-primary: #86C332;
+    --color-segundary: #764ba2;
+    --boton-padding: 20px 40px;
+}
+
+.container-anuncio {
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 40px 0;
+    max-width: 1400px;
+    /* background-color: #f7f7f7; */
+}
+
+.subtitle {
+    color: var(--color-primary);
+    font-size: 2rem;
+    margin-bottom: 35px;
+}
+
+.about {
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.about__img {
+    text-align: center;
+}
+
+.about__img--left {
+    text-align: left;
+}
+
+.about__picture {
+    max-width: 97%;
+    border-radius: 20px;
+}
+
+.about__paragraph {
+    margin-bottom: 20px;
+    line-height: 1.5;
+    font-weight: 300;
+    color: #000;
+}
+
+.about__paragraph span {
+    color: #86C332;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.btn-anuncio {
+    text-align: center;
+}
+
+.btn-anuncio button {
+    padding: 10px 25px;
+    border: #bfc0c2 solid 2px;
+    color: #1a1919;
+    background: none;
+    margin: 10px 0;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1.1rem;
+}
+
+.btn-anuncio button:hover {
+    background: #86C332;
+    color: #fff;
+}
+
+.btn-anuncio i {
+    font-size: 2.5rem;
+    color: #1a1919;
+    cursor: pointer;
+}
+
+.btn-anuncio i:hover {
+    color: #86C332;
+}
+
+@media(max-width:800px) {
+    .about {
+        grid-template-columns: 1fr;
+        gap: 25px;
+    }
+    .about.container-anuncio {
+        padding-top: 30px;
+    }
+    .about__img--left {
+        text-align: center;
+    }
+    .about__texts:last-child {
+        grid-row: 3/4;
+    }
+    .about__picture {
+        width: 100%;
+    }
+    .about__img {
+        width: 100%;
+        margin: -15px 0;
+    }
+    .subtitle {
+        text-align: center;
+    }
+}
+
+@media(max-width:500px) {
+    .about {
+        row-gap: 60px;
+    }
+    .about.container-anuncio {
+        padding-top: 10px;
+    }
+}
+
+.search-box button {
+    margin-top: -40px;
+}
+
+#no-decoration-a {
+    text-decoration: none;
+    color: #000000;
+}
